# monorepo-bazel

./: BUILD.bazel  README.md  WORKSPACE.bazel  bazel-bazel  bazel-bin  bazel-out  bazel-testlogs  bazel_cmds.md  go.mod  maven_install.json  package-lock.json  package.json
projects/calculator/: BUILD.bazel
projects/calculator-api/: BUILD.bazel  main.py
projects/calculator/src/py/: calculator.py
projects/calculator/test/: calculator_test.py
projects/go_hello_world/: BUILD.bazel
projects/go_hello_world/src/go/src/instabase/hello_world/: BUILD.bazel  hello_world_test.go
projects/go_web/: BUILD.bazel
projects/go_web/src/go/src/server/: BUILD.bazel  main.go
projects/java_greeter/src/main/java/com/instabase/javagreeter/greeter/: BUILD.bazel  Greeter.java
projects/java_greeter/src/main/java/com/instabase/javagreeter/main/: BUILD.bazel  Main.java
projects/node_calculator/: BUILD.bazel  calculator.js  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
projects/projectA/: BUILD.bazel
